# bc-xid-rust

./: CLA.md  Cargo.toml  README.md
CLA-signed/: CLA.wolfmcnally.943652EE38441760C3DC35364B6C2FCF894780AE.md
src/: delegate.rs  document.rs  error.rs  function.rs  key.rs  lib.rs  name.rs  permissions.rs  privilege.rs  provenance.rs  service.rs  shared.rs  xid_document.rs
tests/: custom_assertions.rs  delegate.rs  edge.rs  key.rs  permissions.rs  provenance.rs  service.rs  test_xid_document.rs
tests/common/: mod.rs
