[package]
name = "bc-xid"
version = "0.17.0"
edition = "2024"
description = "Unique, stable, extensible, and verifiable identifiers"
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-xid-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-xid"
keywords = ["cryptography"]                                            # Up to five
categories = ["cryptography"]                                          # https://crates.io/category_slugs

[dependencies]

dcbor = { version = "^0.24.1", features = ["multithreaded"] }
bc-components = "^0.30.0"
bc-envelope = { version = "^0.39.0", features = ["multithreaded"] }
bc-ur = "^0.18.0"
bc-rand = "^0.5.0"
provenance-mark = { version = "^0.18.0", features = ["envelope"] }

hex = "^0.4.3"
thiserror = "^2.0"

[dev-dependencies]
version-sync = "^0.9.0"
indoc = "^2.0.0"
